--- a/infarm-frontend/package.json
+++ b/infarm-frontend/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.44.0",
     "vite": "^5.4.8"
   }
 }
