--- a/infarm-frontend/vercel.json
+++ b/infarm-frontend/vercel.json
@@ -1,5 +1,7 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "framework": "vite",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev"
 }
